--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,40 +1,29 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Númeno RPG
+description: Um sistema de TTRPG que tem como objetivo ser altamente modular.
 template: splash # Remove or comment out this line to display the site sidebar on this page.
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: O RPG que é todo e inconstante
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/Capa.png
   actions:
-    - text: Example Guide
+    - text: Ler o livro
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Acessar o Campanheiro
+      link: https://ohyearsonist.github.io/campanheiro/
       icon: external
       variant: minimal
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+Númeno RPG é um sistema de TTRPG que tem como objetivo ser altamente modular e expansivo, se adaptando a cada jogo. [Possui um sistema de fichas online!](https://ohyearsonist.github.io/campanheiro/)
 
-## Next steps
+Em Númeno RPG, cada rolagem tem consequências com o sistema de pontos de destino e sina, que balanceiam automaticamente as ações dos jogadores e do mestre, além de dar outra dimensão de significado para os resultados dos dados.
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Change page layout" icon="document">
-		Delete `template: splash` in `src/content/docs/index.mdx` to display a
-		sidebar on this page.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+O sistema vem com mecânicas de roleplay que buscam trazer incentivos para a interpretação dos personagens sem ser intrusivo, oficializando mecânicas comumente usadas como regras da casa.
+
+O sistema de combate com uma iniciativa dinâmica e reações simplificadas busca trazer um combate mais simples e rápido, para que todos possam se envolver na batalha sem esperar milênios e sem dez minutos de preparação pra decidir quem vai primeiro.
+
+O sistema de dano padroniza a vida dos personagens para que todos possam se entender nos números e compreender com mais facilidade o estado atual do grupo.
+
+Nesse sistema também se encontra uma expansiva lista de 15 classes e 25 espécies, de Bardos a Palafreneiros, Sacis, Engenheiros, Vampiros, Fungos, Aliens, Eflos, Anões, Felídeos e Minotauros!
