--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,10 +5,11 @@ template: splash # Remove or comment out this line to display the site sidebar o
 hero:
   tagline: O RPG que é todo e inconstante
   image:
-    file: ../../assets/Capa.png
+    dark: ../../assets/Capa.png
+    light: ../../assets/Capa (light theme).png
   actions:
     - text: Ler o livro
-      link: /guides/example/
+      link: /regras/01---introdução/
       icon: right-arrow
     - text: Acessar o Campanheiro
       link: https://ohyearsonist.github.io/campanheiro/
