Add first few classes

--- a/src/content/docs/Regras/05 - Combate.mdx
+++ b/src/content/docs/Regras/05 - Combate.mdx
@@ -4,7 +4,7 @@ title: Comabte
 
 import { Aside } from '@astrojs/starlight/components';
 
-Rolagens de carisma e tentativas de convencimento não-mágicas não funcionam em outros jogadores. Pra convencer outro jogador de fazer alguma coisa, você vai ter de confiar na sua própria capacidade manipulativa ou argumentativa.
+Nem sempre as coisas podem se resolver na conversa. Às vezes, é necessário matar para conseguir alcançar os seus objetivos dentro do jogo. Afinal, RPGs são jogos onde se matam dragões, goblins e outras criaturas em batalhas épicas cheias de magias e brutalidades.
 
 O combate no Númeno é organizado em turnos. A ordem dos turnos está definida na seção "Iniciativa" deste capítulo. A cada turno, um personagem ou monstro pode se movimentar, realizar uma ação principal - como um ataque ou uma interação com o mundo - e as ações bônus a que ele tiver direito.
 
