Add more classes

--- a/src/content/docs/Classes/Druida.mdx
+++ b/src/content/docs/Classes/Druida.mdx
@@ -7,11 +7,11 @@ Os druidas são extremamente conectados à natureza, e essa conexão os leva ao 
 # Características gerais
 
 - Vida
-  - Limite de Dano Máximo (DMX): {Seu nível}d10 + Seu dado de proficiência
-  - Limite de Dano Mínimo (DMN): {Seu nível}d10 + Seu nível
+  - Limite de Dano Máximo (DMX): [Seu nível]d10 + Seu dado de proficiência
+  - Limite de Dano Mínimo (DMN): [Seu nível]d10 + Seu nível
 - Sanidade
-  - Limite de Dano Máximo (DMX): {Seu nível}d12 + Seu dado de proficiência
-  - Limite de Dano Mínimo (DMN): {Seu nível}d12 + Seu nível
+  - Limite de Dano Máximo (DMX): [Seu nível]d12 + Seu dado de proficiência
+  - Limite de Dano Mínimo (DMN): [Seu nível]d12 + Seu nível
 - Dado de Sorte: d12
 - Velocidade: 9 metros
 
@@ -22,3 +22,27 @@ Os druidas são extremamente conectados à natureza, e essa conexão os leva ao 
 - Percepção (Ins)
 
 # Talentos
+
+**Conexão Natural.** Você pode gastar dois pontos de destino para falar com plantas ou animais ao seu redor como se fossem NPCs quaisquer.
+
+**Conhecer suas raízes.** Quando em um ambiente rural ou sem intervenções urbanas, você tem vantagem em rolagens de instinto e inteligência.
+
+**Hibridação.** (2° nível) Você pode gastar três pontos de destino para alterar parcialmente seu corpo de forma a assumir aspectos de outra espécie.
+
+**Climatização.** (2° nível) Você pode gastar cinco pontos de destino para alterar o clima do local aonde você se encontra para qualquer clima que você desejar, mas sem controle sobre ele depois que for estabelecido.
+
+**Amigos na floresta.** (3° nível) Você pode gastar cinco pontos de destino para invocar um animal de pequeno porte que te deve um favor.
+
+**Hibridação efetiva.** (3° nível) Quando sob hibridação, você pode alterar suas estatísticas temporáriamente em uma quantidade de pontos igual ao seu nível.
+
+**Perspectiva.** (4° nível) Você pode gastar dois pontos de destino para ver através de um animal ou planta no ambiente, bem como através dos seus próprios olhos.
+
+**Escrito nas estrelas.** (4° nível) Você pode ver as estrelas independente da hora do dia, e a partir delas, você pode gastar três pontos de destino para adquirir conhecimentos sobre a sua jornada e o seu destino, lendo os horóscopos.
+
+**Transformação.** (5° nível) Quando você usar hibridação, pode gastar três pontos de destino adicionais para se transformar por inteiro, com essa transformação durando por até três turnos e sua hibridação efetiva ganhando mais dois pontos.
+
+**Um de nós.** (6° nível) Quando você usar hibridação, pode falar com qualquer ser da espécie com a qual você se tornou híbrido sem qualquer custo.
+
+**Climatização efetiva.** (6° nível) Quando você usar climatização, poderá controlar elementos do clima como raios e temperatura por até três turnos.
+
+**Alteridade.** (7° nível) Você pode gastar dois pontos de destino para aplicar hibridação, hibridação efetiva e transformação a outra criatura que esteja ao alcance do seu toque.
