Fix Shooter class

--- a/src/content/docs/Classes/Atirador.mdx
+++ b/src/content/docs/Classes/Atirador.mdx
@@ -6,4 +6,48 @@ Seja por arco e flecha ou arma de fogo, atiradores são ameaças temíveis no ca
 
 # Características gerais
 
+- Vida
+  - Limite de Dano Máximo (DMX): [Seu nível]d12 + Seu dado de proficiência
+  - Limite de Dano Mínimo (DMN): [Seu nível]d12 + Seu nível
+- Sanidade
+  - Limite de Dano Máximo (DMX): [Seu nível]d12 + Seu dado de proficiência
+  - Limite de Dano Mínimo (DMN): [Seu nível]d12 + Seu nível
+- Dado de Sorte: d20
+- Velocidade: 9 metros
 
+# Habilidades
+
+- Percepção (Ins)
+- Reflexo (Ins)
+- Coordenação (Agi)
+- Silêncio (Agi)
+
+# Talentos
+
+**Pontaria absurda.** Você tem vantagem em ataques à longa distância.
+
+**Tiro de aviso.** Você pode gastar um ponto de destino para fazer um disparo que te dá um bônus igual ao dobro do seu nível em rolagens de intimidação.
+
+**Tiro curvo.** (2° nível) Você pode gastar dois pontos de destino para dar um tiro curvo que contorna obstáculos.
+
+**Perfuração.** (2° nível) Quando dois inimigos estiverem alinhados, você pode gastar dois pontos de destino para atacar ambos com um só disparo, sendo que o segundo receberá metade do dano que o primeiro receber.
+
+**Disparo múltiplo.** (3° nível) Você pode atingir até dois inimigos em um único turno.
+
+**Arpéu.** (3° nível) Você pode gastar três pontos de destino para atirar um projétil com corda, que você pode usar para se locomover.
+
+**Atirador de elite.** (4° nível) Quando suas rolagens de ataque são superiores a 19, o dano do ataque é considerado maior que o DMX do inimigo.
+
+**Calma.** (4° nível) Se você tiver mais da metade da sua sanidade, seus ataques recebem um dado de proficiência adicional.
+
+**Alvo marcado.** (4° nível) Você pode escolher um alvo no qual focar. Seus ataques contra este alvo terão vantagem.
+
+**Aqui? Não.** (5° nível) Quando um inimigo entrar no seu alcance você pode gastar cinco pontos de destino como reação para se mover para qualquer espaço não ocupado que esteja a uma distância igual ao dobro da sua velocidade.
+
+**Segura aí.** (5° nível) Quando você tiver sucesso em um ataque, você pode gastar três pontos de destino para reutilizar a mesma rolagem contra dois inimigos adicionais no alcance do ataque.
+
+**Emboscada rápida.** (6° nível) Sempre que você iniciar um combate, você ganha 1 metro de velocidade e 1 ponto de bônus em rolagens de silêncio por turno durante o combate
+
+**Visão precisa.** (6° nível) Você tem vantagem em rolagens de percepção (Ins).
+
+**Chuva de projéteis.** (7° nível) Você pode gastar três pontos de destino para cobrir uma área de raio 4 metros com projéteis.
