--- a/src/content/docs/Espécies/Zumbi.mdx
+++ b/src/content/docs/Espécies/Zumbi.mdx
@@ -2,3 +2,6 @@
 title: Zumbi
 ---
 
+**Mordida infectante.** Você pode gastar cinco pontos de destino para morder uma criatura de modo que, quando ela morrer, ela se tornará outro zumbi, que te considerará um aliado.
+
+**Objetificação.** Para qualquer regra, você não é considerado vivo.
