Fix referencing of chapters

--- a/src/content/docs/Classes/Engenheiro.mdx
+++ b/src/content/docs/Classes/Engenheiro.mdx
@@ -5,7 +5,7 @@ title: Engenheiro
 import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="tip" title="Engenharia">
-Para usar essa classe, o mundo precisa usar a magia Engenharia, descrita no capítulo 10.
+Para usar essa classe, o mundo precisa usar a magia Engenharia, descrita no capítulo de [Magia](/regras/07---magia/).
 </Aside>
 
 Incríveis estudiosos, engenheiros são capazes de criar itens para auxiliarem a si e a seus companheiros, das maneiras mais inusitadas. Sua criatividade é admirável e invejável.
@@ -32,7 +32,7 @@ Incríveis estudiosos, engenheiros são capazes de criar itens para auxiliarem a
 # Talentos
 
 <Aside type="note" title="Usuário de magia">
-Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo 10.
+Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo de [Magia](/regras/07---magia/).
 
 Como a magia em Númeno é extremamente modular e variável, a maior parte dos talentos dessa classe será criada pelo próprio jogador em conjunto com o mestre, para melhor refletir as possíveis ramificações da magia.
 
