--- a/src/content/docs/Classes/Saci.mdx
+++ b/src/content/docs/Classes/Saci.mdx
@@ -27,13 +27,13 @@ Devotos ao caos, Sacis manipulam o mundo ao seu redor pelo prazer da bagunça, s
 # Talentos
 
 <Aside type="note" title="Usuário de magia">
-Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo 10.
+Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo de [Magia](/regras/07---magia/).
 
 Como a magia em Númeno é extremamente modular e variável, a maior parte dos talentos dessa classe será criada pelo próprio jogador em conjunto com o mestre, para melhor refletir as possíveis ramificações da magia.
 
 Um grande necromante certamente não terá as mesmas habilidades que um grande conjurador, e assim por diante. Quando escrevendo suas magias, leve em consideração o que é mais adequado para o seu personagem, e estabeleça um custo razoável de pontos de destino.
 
-É recomendado usar a magia de Caos, descrita no capítulo 10.
+É recomendado usar a magia de Caos, descrita no capítulo de [Magia](/regras/07---magia/).
 </Aside>
 
 Gorro vermelho. Você usa um gorro vermelho na cabeça. Enquanto usando ele, você está imune a qualquer tipo de controle mental.
