--- a/src/content/docs/Classes/Bruxo.mdx
+++ b/src/content/docs/Classes/Bruxo.mdx
@@ -27,7 +27,7 @@ Potentes usuários de magia, bruxos são estudiosos temerosos que gastam seus di
 # Talentos
 
 <Aside type="note" title="Usuário de magia">
-Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo 10.
+Essa classe é referente a um usuário de magia, e portanto, lida com as regras modulares de magia descritas no capítulo de [Magia](/regras/07---magia/).
 
 Como a magia em Númeno é extremamente modular e variável, a maior parte dos talentos dessa classe será criada pelo próprio jogador em conjunto com o mestre, para melhor refletir as possíveis ramificações da magia.
 
